--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,7 +1,8 @@
 @import '../../styles/settings.scss';
 
 .component {
-  width: 100%;
+  width: 90%;
+  height: auto;
   display: flex;
 
   input {
